# teachertoolkit

./: .env.example  .firebaserc  .replit  FIREBASE-DEPLOYMENT.md  FIREBASE-READY.md  FIREBASE-STUDIO-GUIDE.md  FIREBASE-STUDIO-LOCAL-SETUP.md  FIREBASE-STUDIO-STEPS.md  FIREBASE_INTEGRATION_COMPLETE.md  FIREBASE_SETUP_GUIDE.md  FIRESTORE-MANUAL-SETUP.md  FIRESTORE-SETUP-GUIDE.md  PLATFORM-COMPATIBILITY.md  QUOTA_MANAGEMENT.md  README-DEPLOYMENT.md  README.md  REPLIT-SECRETS-LIST.md  VIDEO_SYSTEM_EXPLANATION.md  deploy-firebase-simple.sh  firebase-deploy.sh  firebase-login-setup.sh  firebase-quick-deploy.sh  firebase-studio-fix.sh  firebase.json  firestore.indexes.json  firestore.rules  genzion-ai-9d0b2290221b.json  package-lock.json  package.json  pyproject.toml  replit.md  setup-env.sh  start-firebase-emulator.sh  start-local.sh  test-differentiated.html  test-setup.js  vercel.json
.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
attached_assets/: Pasted-Create-a-web-application-for-Empowering-teachers-in-multi-grade-classrooms-with-various-features-age-1753010476712_1753010476713.txt
deploy/: firebase-studio.md  platform-setup.md
functions/: index.js  package-lock.json  package.json  tsconfig.json
generated_htmls/: answer_key___grades_10_1753285140615.html  answer_key___grades_10_1753295846273.html  answer_key___grades_10_1753385337994.html  answer_key___grades_10_1753392763429.html  answer_key___grades_10_1753469376839.html  generated_educational_content__differentiate_between_animal_and_plant_cell____1753469229527.html  (+8 more)
public/: index.html
(+154 files in other folders)
